add balance table and balance transaction and platform setting

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         },
         "files":[
             "app/Http/Functions/Supplier/functions.php",
-            "app/Http/Functions/Users/functions.php"
+            "app/Http/Functions/Users/functions.php",
+            "app/Http/Functions/Platform/functions.php"
         ]
     },
     "autoload-dev": {
